[project]
name = "pal_api"
version = "0.1.0"
description = "Default template for PDM package"
authors = [{ name = "Charahiro-tan", email = "charahiro.tan@gmail.com" }]
dependencies = ["aiohttp>=3.9.3"]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = ["ujson>=5.9.0"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]
