[project]
name = "pal_api"
description = "API Wrapper for Palworld Dedicated Server"
authors = [{ name = "Charahiro-tan", email = "charahiro.tan@gmail.com" }]
dependencies = ["aiohttp>=3.9.4"]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
dynamic = ["version"]
urls = { "homepage" = "https://github.com/Charahiro-tan/pal_api" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Japanese",
    "Programming Language :: Python :: 3",
]


[tool.pdm.dev-dependencies]
dev = ["ujson>=5.9.0"]

[tool.pdm.version]
source = "file"
path = "src/pal_api/__init__.py"


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true


[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]
